starting kit / download & problem basics

--- a/Starting_kit.ipynb
+++ b/Starting_kit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,10 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
@@ -174,16 +177,17 @@
     "from gensim.models.doc2vec import LabeledSentence\n",
     "\n",
     "from lightgbm import LGBMRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "import string\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import log_loss, roc_auc_score, f1_score, precision_score, recall_score\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from scipy.spatial import distance\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "from sklearn.base import BaseEstimator\n",
     "\n",
-    "from sklearn.metrics import accuracy_score"
+    "from problem import get_train_data, get_test_data\n",
+    "from problem import metric_report"
    ]
   },
   {
@@ -195,14 +199,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('')\n",
+    "data = pd.read_csv('../kickstarter-bis/data/test.csv')\n",
     "data = data.dropna(subset=['name'])\n",
     "\n",
     "data.index = np.arange(0, len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## To do before in the \"problem.py\"\n",
+    "\n",
+    "labels = data['pledged']\n",
+    "data.drop(['pledged', 'state', 'usd_pledged_real', 'pledged', 'usd pledged', 'backers'], \n",
+    "          axis=1, inplace=True)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, labels, test_size=0.3)\n",
+    "\n",
+    "X_train.reset_index(inplace=True, drop=True)\n",
+    "X_test.reset_index(inplace=True, drop=True)\n",
+    "y_train.reset_index(inplace=True, drop=True)\n",
+    "y_test.reset_index(inplace=True, drop=True)"
    ]
   },
   {
@@ -214,7 +238,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove dashes and apostrophes from punctuation marks \n",
+    "punct = string.punctuation.replace('-', '').replace(\"'\",'')\n",
+    "# regex to match intra-word dashes and intra-word apostrophes\n",
+    "my_regex = re.compile(r\"(\\b[-']\\b)|[\\W_]\")\n",
+    "\n",
+    "def clean_string(string, punct=punct, my_regex=my_regex, to_lower=False):\n",
+    "    if to_lower:\n",
+    "        string = string.lower()\n",
+    "    # remove formatting\n",
+    "    str = re.sub('\\s+', ' ', string)\n",
+    "     # remove punctuation\n",
+    "    str = ''.join(l for l in str if l not in punct)\n",
+    "    # remove dashes that are not intra-word\n",
+    "    str = my_regex.sub(lambda x: (x.group(1) if x.group(1) else ' '), str)\n",
+    "    # strip extra white space\n",
+    "    str = re.sub(' +',' ',str)\n",
+    "    # strip leading and trailing white space\n",
+    "    str = str.strip()\n",
+    "    return str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,19 +274,104 @@
     "        pass\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        \n",
+    "        #### NLP BASICS ####\n",
+    "        names = X['name'].tolist()\n",
+    "        cleaned_project_names = []\n",
+    "        \n",
+    "        for idx, doc in enumerate(names):\n",
+    "            # clean\n",
+    "            doc = clean_string(doc, punct, my_regex, to_lower=True)\n",
+    "            # tokenize (split based on whitespace)\n",
+    "            tokens = doc.split(' ')\n",
+    "            # remove digits\n",
+    "            tokens = [''.join([elt for elt in token if not elt.isdigit()]) for token in tokens]\n",
+    "            # remove tokens shorter than 3 characters in size\n",
+    "            tokens = [token for token in tokens if len(token) > 1]\n",
+    "            # remove tokens exceeding 25 characters in size\n",
+    "            tokens = [token for token in tokens if len(token) <= 25]\n",
+    "            cleaned_project_names.append(tokens)\n",
+    "            \n",
+    "        ##### Word2vect embedding\n",
+    "        self.model = Word2Vec(cleaned_project_names, min_count=1, size=100, workers=8)\n",
+    "        \n",
     "        return self\n",
     "\n",
     "    def transform(self, X):\n",
-    "        X_new = X.copy()\n",
+    "        data = X.copy()\n",
+    "        \n",
+    "        #### SIMPLE TRANSFORMATION #### \n",
     "        \n",
     "        data['launched_date'] = pd.to_datetime(data['launched'], format='%Y-%m-%d %H:%M:%S')\n",
     "        data['deadline_date'] = pd.to_datetime(data['deadline'], format='%Y-%m-%d %H:%M:%S')\n",
     "        \n",
-    "        #length of project\n",
+    "        # Length of project\n",
     "        data['length'] = data['deadline_date'] - data['launched_date']\n",
-    "        data['length'] = data['length'].map(lambda row: )\n",
+    "        data['length'] = [d.days for d in data['length']]\n",
+    "        \n",
+    "        # Features with month and year of launch\n",
+    "        data['year'] = [d.year for d in data['launched_date']]\n",
+    "        data['month'] = [d.month for d in data['launched_date']]\n",
+    "        data['day'] = [d.day for d in data['launched_date']]\n",
+    "        \n",
+    "        # Length of name\n",
+    "        data['name_length'] = [len(name) for name in data['name']]\n",
     "\n",
-    "        return X_new"
+    "        # Number of words\n",
+    "        data['word_number'] = [len(name.split(' ')) for name in data['name']]\n",
+    "\n",
+    "        # Ponctuation\n",
+    "        data['question'] = (data.name.str[-1] == '?').astype(int)\n",
+    "        data['exclamation'] = (data.name.str[-1] == '!').astype(int)\n",
+    "\n",
+    "        # Upper\n",
+    "        data['uppercase'] = data.name.str.isupper().astype(float)\n",
+    "        \n",
+    "        # Create dummies for categorical features\n",
+    "        main_category = pd.get_dummies(data['main_category'],prefix='mc')\n",
+    "        category = pd.get_dummies(data['category'], prefix = 'cat')\n",
+    "        country = pd.get_dummies(data['country'], prefix = 'country')\n",
+    "        currency = pd.get_dummies(data['currency'], prefix = 'currency')\n",
+    "\n",
+    "        data = pd.concat([data, main_category, category, country, currency], axis=1)\n",
+    "        \n",
+    "        # Drop several features\n",
+    "        names = data['name'].tolist()\n",
+    "\n",
+    "        features_to_drop =['main_category', 'category', 'country', 'currency', 'name',\n",
+    "                           'deadline', 'deadline_date', 'launched_date', 'launched',\n",
+    "                           'usd_goal_real', 'ID']\n",
+    "        data.drop(features_to_drop, axis=1, inplace=True)\n",
+    "\n",
+    "        #### NLP BASICS ####\n",
+    "        cleaned_project_names = []\n",
+    "        \n",
+    "        for idx, doc in enumerate(names):\n",
+    "            # clean\n",
+    "            doc = clean_string(doc, punct, my_regex, to_lower=True)\n",
+    "            # tokenize (split based on whitespace)\n",
+    "            tokens = doc.split(' ')\n",
+    "            # remove digits\n",
+    "            tokens = [''.join([elt for elt in token if not elt.isdigit()]) for token in tokens]\n",
+    "            # remove tokens shorter than 3 characters in size\n",
+    "            tokens = [token for token in tokens if len(token) > 1]\n",
+    "            # remove tokens exceeding 25 characters in size\n",
+    "            tokens = [token for token in tokens if len(token) <= 25]\n",
+    "            cleaned_project_names.append(tokens)\n",
+    "            \n",
+    "        name_matrix = np.zeros((len(cleaned_project_names), 100), dtype=\"float32\")\n",
+    "\n",
+    "        for i in range(len(cleaned_project_names)):\n",
+    "            try:\n",
+    "                name_matrix[i,]= self.model.wv[cleaned_project_names[i]].sum(0) / len(cleaned_project_names[i]) \n",
+    "            except:\n",
+    "                pass\n",
+    "                \n",
+    "        name_embeddings = pd.DataFrame(name_matrix)\n",
+    "        \n",
+    "        data = pd.concat([data, name_embeddings], axis=1)\n",
+    "        \n",
+    "        return data"
    ]
   },
   {
@@ -247,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,8 +395,76 @@
     "    def fit(self, X, y):\n",
     "        self.model.fit(X, y)\n",
     "\n",
-    "    def predict_proba(self, X):\n",
-    "        return self.model.predict(X)"
+    "    def predict(self, X):\n",
+    "        prediction = self.model.predict(X)\n",
+    "        return np.maximum(prediction, np.zeros(prediction.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_extractor = FeatureExtractor()\n",
+    "\n",
+    "feature_extractor.fit(X_train, y_train)\n",
+    "\n",
+    "X_train = feature_extractor.transform(X_train)\n",
+    "X_test = feature_extractor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgb_regressor = Regressor()\n",
+    "\n",
+    "lgb_regressor.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lgb_regressor.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------- REGRESSION METRICS --------\n",
+      "\n",
+      "RMSE: 78447.00\n",
+      "MAE: 13146.39\n",
+      "\n",
+      "-------- CLASSIFICATION METRICS --------\n",
+      "\n",
+      "Accuracy: 0.65\n",
+      "Precision: 0.49\n",
+      "Recall: 0.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_report(X_test, y_true=y_test, y_pred=y_pred)"
    ]
   },
   {
