--- a/Starting_kit.ipynb
+++ b/Starting_kit.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Download data from a google drive, create a 'data' folder and \n",
+    "copy the four csv files into it\n",
+    "The file_ids must refer to files with 'public' option in 'share' parameter \n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "file_ids = ['1kZVi3f6pHq3wyt4FpR_8-c4wwYgykL6o']\n",
+    "\n",
+    "destinations = ['./data/data.csv']\n",
+    "\n",
+    "for file_id, destination in zip(file_ids, destinations):\n",
+    "\n",
+    "    gdd.download_file_from_google_drive(file_id=file_ids,\n",
+    "                                        dest_path=destination,\n",
+    "                                        unzip=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
