KPI and Data Sources explanation

--- a/Starting_kit.ipynb
+++ b/Starting_kit.ipynb
@@ -4,13 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  DataCamp Business Case - Kickstarter - Predicting success of fundraising\n",
+    "<h1><center> DataCamp Business Case <br> Kickstarter - Predicting success of fundraising </center></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>  <p style=\"text-align:left;\">Authors : <span style=\"float:right;\"> Professors:<br>  <br> Alexandre GRAMFORT <br> Balazs KEGL<br> <br> <br>\n",
+    "</span></p>\n",
     "\n",
-    "### Authors : Hamza Filali Baba - Eulalie Formery - Damien Grasset - Alice Guichenez - Hugo Perrin\n",
+    "<br> Hamza Filali Baba <br> Eulalie Formery<br> \n",
+    "\n",
+    "Damien Grasset <br>  Alice Guichenez <br> Hugo Perrin</h3>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "M2 DataScience - Université ParisScalay\n",
     " \n",
-    "Professors: Alexandre GRAMFORT & Balazs KEGL\n",
     "\n",
     "***"
    ]
@@ -19,7 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  <a style=\"color:#00925B\"> 1. Business case</a>\n",
+    "<img src=\"img/kickstarter-logo.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a href=\"#1.-Business-case\" style=\"color:#00925B\">1.&nbsp;&nbsp;Business case </a>\n",
     "\n",
     "- Context\n",
     "- Business problem\n",
@@ -31,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  <a style=\"color:#00925B\"> 2. Exporation of the data</a>\n",
+    "## <a href=\"#2.-Exploration-of-the-data\" style=\"color:#00925B\">2.&nbsp;&nbsp;Exporation of the data </a>\n",
     "\n",
     "- a completer"
    ]
@@ -40,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  <a style=\"color:#00925B\"> 3. Baseline model </a>\n",
+    "## <a href=\"#3.-Baseline-model\" style=\"color:#00925B\">3.&nbsp;&nbsp;Baseline model </a>\n",
     "\n",
     "- a completer"
    ]
@@ -49,14 +71,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  <a style=\"color:#00925B\"> 4. Local testing before submission </a>"
+    "## <a href=\"#4.-Local-testing-before-submission\" style=\"color:#00925B\">4.&nbsp;&nbsp;Local testing before submission  </a>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a style=\"color:#00925B\"> 1. Business case </a>\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id=\"#Business-case\"  style=\"color:#00925B\">1. Business case</a>\n",
     "\n",
     "##  <span style=\"color:#00925B\"> 1.1 Context  </span> \n",
     " \n",
@@ -93,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -105,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('data/full_data.csv')"
@@ -234,7 +267,43 @@
    "source": [
     "**Business metrics**\n",
     "\n",
-    "A COMPLETER\n"
+    "The prediction task, ie a multiclass classification with three differents output that are :\n",
+    "- The project hasn't been funded - Failed Fundraising\n",
+    "- The project has been funded (in correct proportion) - Successful Fundraising\n",
+    "- The project has been too much funded - Higher Success.\n",
+    "\n",
+    "This is where it becomes interesting for Kickstarter to come up with a Key Perfomance Indicator (KPI). Indeed, more than just  having a good accuracy on the prediction, Kickstaster, as all businesses, wants to generate as more profit as it can with the output of the prediction.\n",
+    "\n",
+    "Let's imagine a (simple) strategy of goal recommandation from Kickstarer according to the prediction : \n",
+    "- if we think the goal can be increased (ie predict a Higher Sucess), Kicksarter recommand an increased goal of 20%.\n",
+    "- if, on the contrary, the goal is too large (Failed Fundraising), Kicksarter recommand a decreased goal of 20%.\n",
+    "- if it think it will be successful, the first goal is maintained.\n",
+    "\n",
+    "\n",
+    "As Kickstarter only receives 5% of the set goal of the project in case of sucess, which is the only revenue it will generate with its plateform, one can see prediction errors in the classification as potential **shortfall** in revenue :\n",
+    "\n",
+    "- **(1)** if the project hasn't been 100% funded for a given goal $O_p$, but was pledged only $P_p < O_p$ but Kickstarter has predicted whether a success or a higher success, it means that Kistarted have missed a successful fundraising of $P_p$ for this project, ie :\n",
+    "\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 20\\% \\times O_p \\mbox{ if pleged at more than 80\\%}$$\n",
+    "$$\\mbox{loss}_p = 0 \\mbox{ if pleged at less than 80\\%}$$\n",
+    "\n",
+    "- **(2)** if the project was predicted as a failed fundraising, the goal gets a 20% penalty. Hence, if the project was actually successful or with an higher success, it leads to a loss for Kickstaster : \n",
+    "\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 20\\% \\times 0_p \\mbox{ if success}$$\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 40\\% \\times 0_p \\mbox{ if higher success}$$\n",
+    "\n",
+    "- **(3)** If the project was predicted as higher success but was in fact just successful, it means that Kickstarter will lose everything by recommanding an increase in the goal :\n",
+    "\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 0_p$$\n",
+    "\n",
+    "- **(4)** Finally, if the project was predicted as a normal success but was in fact a higher success, Kistarster loses potentially 20% of the additional amount Kickstarter could have claimed :\n",
+    "\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 20\\%  \\times 0_p$$\n",
+    "\n",
+    "\n",
+    "Those 4 types of errors are directly connected with the 6 different cell errors in the confusion matrix as you can see below. Not that numbers inside cells are one of the error types listed above.\n",
+    "\n",
+    "<img src=\"img/confusion_matrix.png\" width=\"600\">"
    ]
   },
   {
@@ -261,7 +330,21 @@
    "source": [
     "##  <span style=\"color:#00925B\"> 1.3 Data presentation  </span> \n",
     "\n",
-    "rep à la question What data cleaning/tidying steps were required to obtain clean training data\n"
+    "rep à la question What data cleaning/tidying steps were required to obtain clean training data\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "To understand the story of the data collection and have all information about it, one is invited to take a look at the *data_sources* folder in the  <a href=\"https://github.com/EulalieFy/kickstarter-project/tree/master/data_sources\">GitHub repository</a>. Here is a summary of it.\n",
+    "\n",
+    "We collected the original data from the *webrobots.io* that scrapped the Kickstarter website in huge dataset containing a LOT of information. The data was a bit messy though. Indeed lots of information were hidden in string definition of dictionnary within cells of the dataframe. From this huge dataset and thanks to regex matching tools from instance, we extracted and selected features we consider interesting for the tasks.\n",
+    "\n",
+    "From this lighted dataset, we reformated the data in the correct types (datetime, str, etc) and create other variables, dealing with missing value and using standard data processing methods.\n",
+    "\n",
+    "\n",
+    "**Bonus**:\n",
+    "\n",
+    "In addition, we downloaded as well a subset of project images  from url founds in the original dataset, as well as another subset of descriptions - full text of presentation on the home page of a project - thanks to python scrapping packages. All this data is hosted on the same Google Drive as the datasets we will use here. This unstructed and multi-format data (png, txt) are not used in this starting kit but represent an interesting amount of data to use for the task.\n"
    ]
   },
   {
@@ -278,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a style=\"color:#00925B\"> 2. Exploration of the data </a>"
+    "# <a style=\"color:#00925B\">2. Exploration of the data</a>"
    ]
   },
   {
@@ -1107,34 +1190,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  <a style=\"color:#00925B\"> 3. Baseline model </a>"
+    "#  <a style=\"color:#00925B\">3. Baseline model</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  <a style=\"color:#00925B\"> 4. Local testing before submission </a>"
+    "#  <a style=\"color:#00925B\">4. Local testing before submission</a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1291,7 +1380,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -1331,7 +1422,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('../kickstarter-bis/data/test.csv')\n",
@@ -1343,7 +1436,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## To do before in the \"problem.py\"\n",
@@ -1370,7 +1465,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# remove dashes and apostrophes from punctuation marks \n",
@@ -1397,7 +1494,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class FeatureExtractor(object):\n",
@@ -1515,7 +1614,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Regressor(BaseEstimator):\n",
@@ -1541,7 +1642,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_extractor = FeatureExtractor()\n",
@@ -1555,7 +1658,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lgb_regressor = Regressor()\n",
@@ -1606,7 +1711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1627,7 +1734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
