--- a/Starting_kit.ipynb
+++ b/Starting_kit.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a href=\"#2.-Exploration-of-the-data\" style=\"color:#00925B\">2.&nbsp;&nbsp;Exporation of the data </a>\n",
+    "## <a href=\"#2.-Exploration-of-the-data\" style=\"color:#00925B\">2.&nbsp;&nbsp;Exploration of the data </a>\n",
     "\n",
     "- Descriptive statistics\n",
     "\n",
@@ -64,7 +64,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a href=\"#3.-Baseline-model\" style=\"color:#00925B\">3.&nbsp;&nbsp;Baseline model </a>\n"
+    "## <a href=\"#3.-Baseline-model\" style=\"color:#00925B\">3.&nbsp;&nbsp;Baseline model </a>\n",
+    "\n",
+    "- Feature extractor\n",
+    "\n",
+    "- Classifier"
    ]
   },
   {
@@ -267,57 +271,57 @@
    "source": [
     "**Business metrics**\n",
     "\n",
-    "The prediction task, ie a multiclass classification with three differents output that are :\n",
+    "The prediction task, i.e. a multiclass classification with three differents output that are :\n",
     "- The project hasn't been funded - Failed Fundraising\n",
     "- The project has been funded (in correct proportion) - Successful Fundraising\n",
     "- The project has been too much funded - Higher Success.\n",
     "\n",
-    "This is where it becomes interesting for Kickstarter to come up with a Key Perfomance Indicator (KPI). Indeed, more than just  having a good accuracy on the prediction, Kickstaster, as all businesses, wants to generate as more profit as it can with the output of the prediction.\n",
+    "This is where it becomes interesting for Kickstarter to come up with a Key Performance Indicator (KPI). Indeed, more than just  having a good accuracy on the prediction, Kickstaster, as all businesses, wants to generate as much profit as it can with the output of the prediction.\n",
     "\n",
     "Let's imagine a (simple) strategy of goal recommandation from Kickstarer according to the prediction : \n",
-    "- if we think the goal can be increased (ie predict a Higher Sucess), Kicksarter recommend an increased goal of 20%.\n",
+    "- if we think the goal can be increased (i.e. predict a Higher Sucess), Kicksarter recommends an increased goal of 20%.\n",
     "- if, on the contrary, the goal is too large (Failed Fundraising), Kicksarter recommend a decreased goal of 20%.\n",
     "- if it think it will be successful, the first goal is maintained.\n",
     "\n",
     "\n",
-    "As Kickstarter only receives 5% of the set goal of the project in case of sucess, which is the only revenue it will generate with its plateform, one can see prediction errors in the classification as potential **shortfall** in revenue :\n",
+    "As Kickstarter only receives 5% of the set goal of the project in case of sucess, which is the only revenue it will generate with its platform, one can see prediction errors in the classification as potential **shortfall** in revenue :\n",
     "\n",
-    "- **(1)** if the project hasn't been 100% funded for a given goal $O_p$, but was pledged only $P_p < O_p$ but Kickstarter has predicted whether a success or a higher success, it means that Kistarted have missed a successful fundraising of $P_p$ for this project, ie :\n",
+    "- **(1)** if the project hasn't been 100% funded for a given goal $O_p$, but was pledged only $P_p < O_p$ but Kickstarter has predicted either a success or a higher success, it means that Kickstarter has missed a successful fundraising of $P_p$ for this project, ie :\n",
     "\n",
     "$$\\mbox{loss}_p = 5\\% \\times 20\\% \\times O_p \\mbox{ if pleged at more than }80\\%$$\n",
     "$$\\mbox{loss}_p = 0 \\mbox{ if pleged at less than }80\\%$$\n",
     "\n",
-    "In practise, as we will talk about it in the data exploration part, there are only few projects that fail to be funded when they reach at least 80% - intuitively, the people in charge of teh project will try to manage to get to 100% so as not to lose all the pledged money so close to the goal. We will then use : $\\mbox{loss}_p = 0$\n",
+    "In practice, as we will talk about it in the data exploration part, there are only few projects that fail to be funded when they reach at least 80% - intuitively, the people in charge of teh project will try to manage to get to 100% so as not to lose all the pledged money so close to the goal. We will then use: $\\mbox{loss}_p = 0$\n",
     "\n",
-    "- **(2)** if the project was predicted as a failed fundraising, the goal gets a 20% penalty. Hence, if the project was actually successful or with an higher success, it leads to a loss for Kickstaster : \n",
+    "- **(2)** if the project was predicted as a failed fundraising, the goal gets a 20% penalty. Hence, if the project was actually successful or with an higher success, it leads to a loss for Kickstarter : \n",
     "\n",
-    "$$\\mbox{loss}_p = 5\\% \\times 20\\% \\times 0_p \\mbox{ if success}$$\n",
-    "$$\\mbox{loss}_p = 5\\% \\times 40\\% \\times 0_p \\mbox{ if higher success}$$\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 20\\% \\times O_p \\mbox{ if success}$$\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 40\\% \\times O_p \\mbox{ if higher success}$$\n",
     "\n",
-    "- **(3)** If the project was predicted as higher success but was in fact just successful, it means that Kickstarter will lose everything by recommanding an increase in the goal :\n",
+    "- **(3)** If the project was predicted as higher success but was in fact just successful, it means that Kickstarter will lose everything by recommending an increase in the goal :\n",
     "\n",
-    "$$\\mbox{loss}_p = 5\\% \\times 0_p$$\n",
+    "$$\\mbox{loss}_p = 5\\% \\times O_p$$\n",
     "\n",
-    "- **(4)** Finally, if the project was predicted as a normal success but was in fact a higher success, Kistarster loses potentially 20% of the additional amount Kickstarter could have claimed :\n",
+    "- **(4)** Finally, if the project was predicted as a normal success but was in fact a higher success, Kickstarter loses potentially 20% of the additional amount Kickstarter could have claimed :\n",
     "\n",
-    "$$\\mbox{loss}_p = 5\\% \\times 20\\%  \\times 0_p$$\n",
+    "$$\\mbox{loss}_p = 5\\% \\times 20\\%  \\times O_p$$\n",
     "\n",
     "\n",
     "Those 4 types of errors are directly connected with the 6 different cell errors in the confusion matrix as you can see below. Not that numbers inside cells are one of the error types listed above.\n",
     "\n",
     "<img src=\"img/confusion_matrix.png\" width=\"600\">\n",
     "\n",
-    "At the end, we can easily compute a shortfall loss by summing on all the project according to the corresponding error of prediction.\n",
+    "In the end, we can easily compute a shortfall loss by summing on all the project according to the corresponding error of prediction.\n",
     "\n",
     "** In practice **:\n",
     "\n",
-    "To build the **shortfall** metric, we decided not to take into account the value of the goal value of project. Indeed, we decided to normalize it to 1 for two reasons : \n",
-    "- First of all because, it would need to take into account the colomns \"goal\" of the features dataset and use it inside the score function. But all score metrics in the ramp-workflow have a very precised structure that does not allow easily to put it in argument of the function. Thus, it becomes a *normalize* shortfall of the number of opportunities more than the amount of money it represents. Plus it allows to deal with issues with heterogeneous and values that are not at the same scale - which can have a big impact on the KPI.\n",
-    "- Secondly, because it allows a simpler computation, as it boils down to the following loss formula :\n",
+    "To build the **shortfall** metric, we decided not to take into account the value of the goal value of project. Indeed, we decided to normalize it to 1 for two reasons: \n",
+    "- First of all because it would require to take into account the columns \"goal\" of the features dataset and use it inside the score function. But all score metrics in the ramp-workflow have a very specific structure that does not allow easily to put it in argument of the function. Thus, it becomes a *normalize* shortfall of the number of opportunities more than the amount of money it represents. Plus it allows to deal with issues with heterogeneous and values that are not at the same scale - which can have a big impact on the KPI.\n",
+    "- Secondly, because it allows a simpler computation, as it boils down to the following loss formula:\n",
     "\n",
     "$$ \\mbox{shortfall} = 0 \\times nb_{type1} +  5\\% \\times 20\\% \\times nb_{type2, success} + 5\\% \\times 40\\% \\times nb_{type2, higher success} +  5\\%  \\times nb_{type3} + 5\\% \\times 20\\%  \\times nb_{type4}$$\n",
     "\n",
-    "or simply : \n",
+    "or simply: \n",
     "\n",
     "$$ \\mbox{shortfall} =  0.05 \\times ( 0.2 \\times (nb_{type2, success}+  nb_{type4}) + 0.4* \\times nb_{type2, higher success} +   nb_{type3}) $$"
    ]
@@ -326,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Workflow**\n",
+    "**Data downloading**\n",
     "\n",
     "In order to download the data, one can run from the terminal : \n",
     "```\n",
@@ -355,14 +359,10 @@
    "source": [
     "##  <span style=\"color:#00925B\"> 1.3 Data presentation  </span> \n",
     "\n",
-    "rep à la question What data cleaning/tidying steps were required to obtain clean training data\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "To understand the story of the data collection and have all information about it, one is invited to take a look at the *data_sources* folder in the  <a href=\"https://github.com/EulalieFy/kickstarter-project/tree/master/data_sources\">GitHub repository</a>. Here is a summary of it.\n",
     "\n",
-    "We collected the original data from the *webrobots.io* that scrapped the Kickstarter website in huge dataset containing a LOT of information. The data was a bit messy though. Indeed lots of information were hidden in string definition of dictionnary within cells of the dataframe. From this huge dataset and thanks to regex matching tools from instance, we extracted and selected features we consider interesting for the tasks.\n",
+    "We collected the original data from the *webrobots.io* that scrapped the Kickstarter website in huge dataset containing a lot of information. The data was a bit messy though. Indeed lots of information were hidden in string definition of dictionnary within cells of the dataframe. From this huge dataset and thanks to regex matching tools from instance, we extracted and selected features we consider interesting for the tasks.\n",
     "\n",
     "From this lighted dataset, we reformated the data in the correct types (datetime, str, etc) and create other variables, dealing with missing value and using standard data processing methods.\n",
     "\n",
@@ -378,7 +378,7 @@
    "source": [
     "##  <span style=\"color:#00925B\"> 1.4 Limits of our approach  </span> \n",
     "\n",
-    "A first limit of our approach comes from the fact that the data we got is probably not enough to explain the successful aspect of the fundraising all by itself. Further data including detailed project description and information about the project kicker (how many projects they already launched and how many of them were successful, host country of the project, etc) would certainly have been useful. \n",
+    "A first limit of our approach comes from the fact that the data we got is probably not enough to explain the successful aspect of the fundraising all by itself. Further data including detailed project description and information about the project kicker (how many projects they already launched, how many of them were successful, etc) would certainly have been useful. \n",
     "Another limit is that we only know if the projects are successful in the sense that the money has been collected or not. However, this should not be the only point of focus because it does not guarantee that once the funds have been collected, the project will be properly implemented: for example, if our model recommends lowering the target amount to get higher chances to collect the money, maybe this amount will underestimate the actual requirements of the project and it will not be realizable. Our point of view was to focus on the profit aspect of the business, but the success of the project once the money has been collected might be relevant to Kickstarter’s business as well. The ideal would have been to have further data about the success of the realization of the project itself and not of the collection of the funds only."
    ]
   },
@@ -1249,14 +1249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  <a style=\"color:#00925B\">4. Local testing before submission</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Feature extractor"
+    "## <a style=\"color:#00925B\">3.1 Feature extractor</a>"
    ]
   },
   {
@@ -1455,7 +1448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classifier"
+    "## <a style=\"color:#00925B\">3.2 Classifier</a>"
    ]
   },
   {
@@ -1506,7 +1499,7 @@
     "collapsed": true
    },
    "source": [
-    "# Local testing with RAMP (before submission)\n",
+    "#  <a style=\"color:#00925B\">4. Local testing before submission</a>\n",
     "\n",
     "\n",
     "It is important that you test your submission files before submitting them. For this we provide a unit test. Note that the test runs on your files in submissions/starting_kit, not on the classes defined in the cells of this notebook.\n",
@@ -1607,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
